# bulki

./: README.md  license.txt  pyproject.toml
bulki/: hooks.py  modules.txt
bulki/bulki/doctype/allowed_doctypes_item/: allowed_doctypes_item.json  allowed_doctypes_item.py
bulki/bulki/doctype/permission_setter/: permission_setter.js  permission_setter.json  permission_setter.py  test_permission_setter.py
bulki/bulki/doctype/show_user_permission_item/: show_user_permission_item.json  show_user_permission_item.py
bulki/bulki/doctype/user_selector_item/: user_selector_item.json  user_selector_item.py
bulki/bulki/report/user_permissions_summary/: user_permissions_summary.js  user_permissions_summary.json  user_permissions_summary.py
