[project]
name = "bulki"
authors = [
    { name = "AjayRaj Mahiwal", email = "ajaymahi545@gmail.com"}
]
description = "**BULKi** is a Frappe app for fast and easy bulk management of user and role permissions, streamlining access control with efficiency and precision."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
